--- a/css/home.css
+++ b/css/home.css
@@ -111,8 +111,8 @@ footer .footer-links a img{
     border: 2px solid #fff;
     border-radius: 50%;
 }
-footer .footer-links{
+footer .footer-links {
+    /* display: inline; */
     float: right;
-    display: inline;
     padding: 20px 100px ;
 }
