--- a/css/cancelATrip.css
+++ b/css/cancelATrip.css
@@ -1,7 +1,13 @@
-.cancelATrip_container {
+.cancelATrip-container {
+    height: 100%;
+    background-image: url(../assets/homepage/a3.png); 
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.cancelATrip-second-container {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    padding-top: 100px;
 }
 .cancelATrip_form {
     width: 50%;
