--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,44 @@ nav {
 .l1:hover{
     border: none;
 }
+footer {
+    background-color: rgb(7, 53, 58);
+    height: 200px;
+}
+footer .footer-left {
+    float: left;
+    padding: 20px 100px ;
+}
+footer .footer-left a {
+    color: #fff;
+    text-decoration: none;
+    display: block; 
+    padding-top: 10px;
+}
+footer .footer-right {
+    display: flex;
+    flex-direction: column;
+    float: right;
+}
+footer .footer-sign {   
+    text-align: right;
+    padding: 20px 100px ;
+}
+footer .footer-sign a {
+    color: #fff;
+    text-decoration: none;
+    display: block; 
+    padding-top: 10px;
+}
+footer .footer-links a img{
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+}
+footer .footer-links {
+    /* display: inline; */
+    float: right;
+    padding: 20px 100px ;
+}
