Ch button links 167708504 (#16)
* ch ( css): add a picture

* ft add the git ignore

* ch: resizing the age input, reduce padding in the below div also in the footer with inline display

* ch(feedback-UI): delivered the feedback on the UI

--- a/css/oneTrip.css
+++ b/css/oneTrip.css
@@ -20,6 +20,7 @@
     font-size: 40px;
 }
 .oneTrip button {
+    background-color: #ba6509;
     background-color: #BF214B;
     border: none;
     border-radius: 5px;
