--- a/css/trip.css
+++ b/css/trip.css
@@ -54,7 +54,7 @@
     padding-left: 50px;
 }
 .trip1 button {
-    background-color: #BF214B;
+    background-color: #ba6509;
     border: none;
     border-radius: 5px;
     color: #fff;
