--- a/css/createATrip.css
+++ b/css/createATrip.css
@@ -25,7 +25,7 @@
 }
 #submit {
     border: none;
-    background-color: rgb(31, 81, 122);
+    background-color: #ba6509;
     padding: 10px;
     font-size: 15px;
     margin-top: 20px;
