--- a/css/signup.css
+++ b/css/signup.css
@@ -11,7 +11,7 @@
 }
 .signup_form {
     width: 50%;
-    height: 400px;
+    height: 450px;
     background-color: rgba(14, 105, 115, 0.829);
     text-align: center;
     padding-top: 50px;
@@ -20,12 +20,21 @@
     margin-bottom: 30px;
     width: 40%;
     font-size: 15px;
-    padding-left: 5px;
+    padding: 10px 10px 10px 10px;
+    background-color: rgba(255, 255, 255, 0.329);
+    font-size: 18px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+#txt::placeholder{
+    color: rgba(255, 255, 255, 0.767);
+    font-size: 18px;
 }
 #submit {
     border: none;
     border-radius: 5px;
-    background-color: #BF214B;
+    background-color: #ba6509;
     padding: 10px;
     font-size: 20px;
     margin-top: 20px;
