ch(feedback-UI): delivered the feedback on the UI (#17)
* ft (*): add homepage

* Ft homepage #167606375 (#2)

* ft add task file for all tasks

* chore (css): add css file

* ft (*): add style

* ft (*): add style

* Ft signup #167275922 (#3)

* chore (css): add style to the file

* Chore (css): add picture

* Ft signin #167276116 (#4)

* chore (css): add style to it

* chore (css): add a picture

* chore (css): add style to it (#5)

* chore (css): add style to it (#6)

* chore(css): add style to it (#7)

* chore (css): add style to it (#8)

* chore(css): add style to it (#9)

* chore(css): add style to it (#10)

* chore(css): add style to it (#11)

* Ft delete booking #167276138 (#12)

* chore (css): add style to it

* chore (css): add a picture

* Ch button links 167708504 (#16)

* ch ( css): add a picture

* ft add the git ignore

* ch: resizing the age input, reduce padding in the below div also in the footer with inline display

* ch(feedback-UI): delivered the feedback on the UI

--- a/css/oneTrip.css
+++ b/css/oneTrip.css
@@ -20,7 +20,7 @@
     font-size: 40px;
 }
 .oneTrip button {
-    background-color: #BF214B;
+    background-color: #ba6509;
     border: none;
     border-radius: 5px;
     color: #fff;
