--- a/css/bookSeat.css
+++ b/css/bookSeat.css
@@ -1,40 +1,62 @@
-.bookSeat-container {
-    display: flex;
-    height: 100%;
-    background-image: url(../assets/trip/a1.jpg); 
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.bookSeat-second-container {
-    margin: 100px 50px 20px 50px;
-    width: 100%;
-    /* height: 100%; */
-    background-color: rgba(14, 105, 115, 0.829);
-    border-radius: 5px;
-    padding: 20px;
-}
-.bookSeat-content {
-    background-color: rgba(193, 208, 217, 0.185);
+.bus {
     float: left;
-    width: 75%;
-    height: 100%;
-    margin-left: 20px;
-    /* display: flex; */
 }
-.bookSeat {
-    padding-left: 100px;
+.seat {
+    margin: 10px;
 }
-.bookSeat h1{
-    font-size: 40px;
+.left-alone {
+    margin-left: 110px;
 }
-.bookSeat button {
-    background-color: #BF214B;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    padding: 10px;
-    font-size: 20px;
+.disabled {
+    background: #f73737;
+    color: #ffffff;
+}
+label {
+    border-radius: 4px;
+    background: #C1D0D9;
+    color: rgb(7, 53, 58);
+    padding: 5px;
     text-align: center;
-    margin-top: 20px;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    font-size: 12px;
+    /* cursor: pointer; */
+}
+/* label:hover {
+    color: #ffffff;
+    background: #46be8a;
+} */
+input[type="radio"] {
     cursor: pointer;
+}
+input[type="radio"]:disabled {
+    cursor: not-allowed;
+    background: #f73737;
+}
+.seat-BLANK {
+    display: none;
+}
+.text-right {
+    float: right;
+    padding-right: 50px;
+}
+.pcolor-blue{
+    padding: 5px 10px ;
+    margin-right: 10px;
+    background-color: #C1D0D9;
+}
+/* .pcolor-green{
+    padding: 5px 10px ;
+    margin-right: 10px;
+    background-color: #46be8a;
+} */
+.pcolor-red{
+    padding: 5px 10px ;
+    margin: 10px 10px 0px 0px;
+    background-color: #f73737;
+}
+.text-bottom {
+    float: right;
+    width: 100%;
 }
