--- a/css/style.css
+++ b/css/style.css
@@ -51,17 +51,18 @@ nav {
 }
 footer {
     background-color: rgb(7, 53, 58);
-    height: 200px;
+    height: 80px;
 }
 footer .footer-left {
     float: left;
-    padding: 20px 100px ;
+    padding: 30px 100px ;
 }
 footer .footer-left a {
     color: #fff;
     text-decoration: none;
-    display: block; 
+    display: inline; 
     padding-top: 10px;
+    padding-right: 50px;
 }
 footer .footer-right {
     display: flex;
@@ -75,8 +76,9 @@ footer .footer-sign {
 footer .footer-sign a {
     color: #fff;
     text-decoration: none;
-    display: block; 
-    padding-top: 10px;
+    display: inline; 
+    padding-top: 20px;
+    padding-left: 50px;
 }
 footer .footer-links a img{
     width: 30px;
@@ -88,5 +90,5 @@ footer .footer-links a img{
 footer .footer-links {
     /* display: inline; */
     float: right;
-    padding: 20px 100px ;
+    padding: 10px 100px 5px 100px ;
 }
