--- a/css/createATrip.css
+++ b/css/createATrip.css
@@ -12,22 +12,31 @@
 .createATrip_form {
     width: 50%;
     height: 500px;
-    background-color: rgba(80, 121, 139, 0.575);
+    background-color: rgba(14, 105, 115, 0.829);
     text-align: center;
     padding-top: 40px;
 }
 #txt {
     margin-bottom: 30px;
     width: 40%;
-    font-size: 15px;
-    padding-left: 5px;
-    margin-left: 10px;
+    font-size: 10px;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.329);
+    font-size: 18px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+#txt::placeholder{
+    color: rgba(255, 255, 255, 0.767);
+    font-size: 18px;
 }
 #submit {
     border: none;
+    border-radius: 5px;
     background-color: #ba6509;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     margin-top: 20px;
     margin-bottom: 30px;
     cursor: pointer;
