--- a/css/oneTrip.css
+++ b/css/oneTrip.css
@@ -15,6 +15,8 @@
 }
 .oneTrip {
     padding-left: 100px;
+    width: 30%;
+    float: left;
 }
 .oneTrip h1{
     font-size: 40px;
@@ -29,4 +31,14 @@
     text-align: center;
     margin-top: 20px;
     cursor: pointer;
+}
+.picture {
+    float: right;
+    width: 50%;
+    padding-right: 50px;
+}
+.picture img {
+    width: 100%;
+    margin-top: 100px;
+    box-shadow: 3px 3px 10px #ba7c099c;
 }
